src/tests/code/fail/fail_write_to_non_mutable_variable.u
entrypoint:~()
{
	iErrorCode:i64{1};
	iErrorCode := 42;
}
->(iErrorCode)